# stock-market-simulator

./: .dockerignore  .gitignore  IMPLEMENTATION_CAVEATS.md  README.md  WALKTHROUGH.md  mkdocs.yml  todo.md
backend/: .env.example  Dockerfile  README.md  debug_chart.js  output.txt  package-lock.json  package.json  probe_years.js  sync_sim_data.js  test_1m.js  test_adapter.js  test_buffer.js  test_fix.js  test_fix_yahoo.js  test_historical.js  test_market_natural.js  test_market_naturalness.js  test_market_sim.js  test_yahoo.js  test_yahoo_numeric.js  tune_sim.js
backend/prisma/: schema.prisma  seed.js
backend/src/: app.js  app.test.js
backend/src/modules/auth/: auth.test.js  routes.js
backend/src/modules/backtest/: routes.js
backend/src/modules/data/: routes.js  routes.test.js
backend/src/modules/instruments/: routes.js
backend/src/modules/leaderboard/: routes.js
backend/src/modules/market/: market.test.js  routes.js
backend/src/modules/market-data/: routes.js
backend/src/modules/market-sim/: admin.js  routes.js  service.js
backend/src/modules/news/: news.test.js  routes.js
backend/src/modules/orders/: routes.js
backend/src/modules/portfolio/: routes.js
backend/src/modules/profile/: routes.js
backend/src/modules/risk/: service.js
backend/src/modules/submissions/: routes.js  routes.test.js  submissions.test.js
backend/src/plugins/: currency.js  prisma.js  redis.js
backend/src/services/ai/: pollinationsService.js
backend/src/services/backtest/: backtestRunner.js
backend/src/services/currency/: index.js
backend/src/services/executor/: executor.cpp.test.js  executor.js  executor.test.js
backend/src/services/indicators/: indicators.js
backend/src/services/judge0/: judge0.js  judge0.test.js
backend/src/services/market/: index.js  mockAdapter.js  simInitService.js  simSyncService.js  yahooAdapter.js
backend/tests/: e2e.test.js
docker/: Dockerfile.single  docker-compose.legacy.yml  docker-compose.yml  entrypoint.sh  init.sql  judge0.conf  nginx.conf  supervisord.conf  test_docker_build.sh
docs/: index.md
docs/algorithms/: api.md  examples.md  guide.md
docs/api/: auth.md  data.md  market-sim.md  market.md  submissions.md
docs/architecture/: backend.md  frontend.md  market-sim.md  overview.md
docs/deployment/: configuration.md  docker.md
docs/getting-started/: quickstart.md  structure.md
docs/market/: agents.md  configuration.md  engine.md  overview.md
docs/stylesheets/: extra.css
docs/testing/: coverage.md  running-tests.md
frontend/: index.html  test.html
frontend/assets/: app.backup.js  styles.css
frontend/assets/css/: main.css
frontend/assets/css/components/: auth.css  base.css  buttons.css  cards.css  forms.css  sidebar.css  tables.css
frontend/assets/css/pages/: backtest.css  dashboard.css  leaderboard.css  portfolio.css  profile.css  trade.css
frontend/assets/js/: api.js  main.js  templateLoader.js  utils.js
frontend/assets/js/modules/: auth.js  backtest.js  market.js  marketSim.js  marketStatus.js  orders.js  portfolio.js  router.js  submissions.js
frontend/components/: auth-modal.html  loading.html  sidebar.html
frontend/pages/: backtest.html  compete.html  dashboard.html  docs.html  leaderboard.html  market-sim-admin.html  market-sim.html  market.html  portfolio.html  profile.html  trade.html
frontend/tests/: frontend.test.js
market_sim/: CMakeLists.txt  Dockerfile  README.md  commodities.json  config.json  stocks.json
market_sim/src/: main.cpp
market_sim/src/agents/: Agent.cpp  Agent.hpp  CrossEffectsTrader.cpp  CrossEffectsTrader.hpp  EventTrader.cpp  EventTrader.hpp  FundamentalTrader.cpp  FundamentalTrader.hpp  InventoryTrader.cpp  InventoryTrader.hpp  MarketMaker.cpp  MarketMaker.hpp  MeanReversionTrader.cpp  MeanReversionTrader.hpp  MomentumTrader.cpp  MomentumTrader.hpp  NoiseTrader.cpp  NoiseTrader.hpp  SupplyDemandTrader.cpp  SupplyDemandTrader.hpp
market_sim/src/api/: ApiServer.cpp  ApiServer.hpp
market_sim/src/core/: Asset.cpp  Asset.hpp  CandleAggregator.cpp  CandleAggregator.hpp  Commodity.cpp  Commodity.hpp  OrderBook.cpp  OrderBook.hpp  RuntimeConfig.hpp  SimClock.cpp  SimClock.hpp  TickBuffer.hpp  Types.hpp
market_sim/src/engine/: MarketEngine.cpp  MarketEngine.hpp  Simulation.cpp  Simulation.hpp
market_sim/src/environment/: MacroEnvironment.cpp  MacroEnvironment.hpp  NewsGenerator.cpp  NewsGenerator.hpp
market_sim/src/utils/: Logger.hpp  Random.hpp  Statistics.hpp
market_sim/tests/: test_api.py  test_candle_simclock.cpp  test_commodity.cpp  test_market_natural.cpp  test_news.cpp  test_orderbook.cpp  test_simclock.cpp  test_tickbuffer.cpp  test_types.cpp
scripts/: run_all_tests.bat  run_all_tests.sh  test_integration.py
